--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "open source javascript ascii tetris cli version",
   "main": "index.js",
   "scripts": {
+    "start": "babel-node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -26,5 +27,9 @@
   "bugs": {
     "url": "https://github.com/kalininskiy/js-tetris-cli/issues"
   },
-  "homepage": "https://github.com/kalininskiy/js-tetris-cli#readme"
+  "homepage": "https://github.com/kalininskiy/js-tetris-cli#readme",
+  "devDependencies": {
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0"
+  }
 }
