--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "js-tetris-cli",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "open source javascript ascii tetris cli version",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node index.js",
+    "build": "babel src -d dist  --source-maps",
+    "start": "node dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -29,7 +30,9 @@
   },
   "homepage": "https://github.com/kalininskiy/js-tetris-cli#readme",
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.26.0"
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1"
   }
 }
