--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.2",
   "description": "open source javascript ascii tetris cli version",
   "main": "index.js",
+  "bin": {
+    "js-tetris-cli": "bin/js-tetris-cli"
+  },
   "scripts": {
     "build": "babel src -d dist  --source-maps",
-    "start": "node dist/index.js",
+    "start": "bin/js-tetris-cli",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
